force-app/main/default/objects/Work_Item__c/fields/Asset_Required__c.field-meta.xml
<CustomField>
    <fullName>Asset_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Required</label>
    <type>Checkbox</type>
</CustomField>