force-app/main/default/objects/Work_Item__c/fields/Closed_No_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_No_Action_Reason__c</fullName>
    <description>List used to describe the reason the work item was closed with no action taken.</description>
    <label>Closed - No Action Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>place</fullName>
            </value>
            <value>
                <fullName>holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>