force-app/main/default/objects/Work_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Displays detailed description of work item.</description>
    <inlineHelpText>Displays detailed description of work item.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>