force-app/main/default/objects/Work_Item__c/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Enterprise Account Related to Work Item</description>
    <inlineHelpText>Parent Enterprise Account Related to Work Item</inlineHelpText>
    <label>Covetrus Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enterprise Accounts</relationshipLabel>
    <relationshipName>Enterprise_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>