force-app/main/default/objects/Work_Item__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Displays internal comments related to work item.</description>
    <inlineHelpText>Displays internal comments related to work item.</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>