force-app/main/default/objects/Work_Item__c/fields/Launch_Project__c.field-meta.xml
<CustomField>
    <fullName>Launch_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a project will be launched</description>
    <label>Launch Project</label>
    <type>Checkbox</type>
</CustomField>