force-app/main/default/objects/Work_Item__c/fields/Legacy_Account__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legacy Account Related to Work Item</description>
    <inlineHelpText>Legacy Account Related to Work Item</inlineHelpText>
    <label>Legacy Account</label>
    <referenceTo>Legacy_Account__c</referenceTo>
    <relationshipLabel>Legacy Accounts</relationshipLabel>
    <relationshipName>Legacy_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>