force-app/main/default/objects/Work_Item__c/fields/Over_ride_Assignment_on_Create__c.field-meta.xml
<CustomField>
    <fullName>Over_ride_Assignment_on_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to exempt record from Process &quot;Work item on Create&quot;.  Can be leveraged both manually and via automation</description>
    <inlineHelpText>Check this field if you wish to over-ride the assignment rules for this record</inlineHelpText>
    <label>Over-ride Assignment on Create</label>
    <type>Checkbox</type>
</CustomField>