force-app/main/default/objects/Work_Item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>This field indicates the priority of the work item.</description>
    <inlineHelpText>This field indicates the priority of the work item.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>