force-app/main/default/objects/Work_Item__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <description>Field used in selection of project template to create from work item.  Controlling field for Project Template.</description>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary Products</fullName>
            </value>
            <value>
                <fullName>New PIMS - AviMark</fullName>
            </value>
            <value>
                <fullName>New PIMS - eVet</fullName>
            </value>
            <value>
                <fullName>New PIMS - ImproMed</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>