force-app/main/default/objects/Work_Item__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>IF( ISBLANK( Project_Name_Entry__c) ,
    TEXT(Project_Template__c ) &amp; &quot; - &quot; &amp;  Account__r.Name,
			 Project_Name_Entry__c 
			)</formula>
    <label>Project Name (formula)</label>
    <type>Text</type>
</CustomField>