force-app/main/default/objects/Work_Item__c/fields/Project_Name_Entry__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Entry__c</fullName>
    <description>Used for manual entry of project name for Project creation automation.  If field is blank, a formula will be used to determine product name (see Project Name (Formula) field)</description>
    <inlineHelpText>Use this field to name the project to be created.  If left blank, the project will be named via a formula.</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>