force-app/main/default/objects/Work_Item__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <label>Project Template</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample_Project</fullName>
                <label>Sample Project</label>
            </value>
            <value>
                <fullName>TestTemplate.xml</fullName>
                <isActive>false</isActive>
                <label>TestTemplate.xml</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>