force-app/main/default/objects/Work_Item__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Displays the reason for the work item.</description>
    <inlineHelpText>Displays the reason for the work item.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Record</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Record Delete</fullName>
            </value>
            <value>
                <fullName>Key Mapping</fullName>
            </value>
            <value>
                <fullName>Ancillary Installation</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Credit Request</fullName>
            </value>
            <value>
                <fullName>On-Site Update</fullName>
            </value>
            <value>
                <fullName>Order Return</fullName>
            </value>
            <value>
                <fullName>Product Onboarding</fullName>
            </value>
            <value>
                <fullName>Remote PIMS Update</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Product Update</fullName>
                <isActive>false</isActive>
                <label>Product Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>