force-app/main/default/objects/Work_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field is used to track status of Work Item.</description>
    <inlineHelpText>This field is used to track status of Work Item.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Closed - New Enterprise Account Created</fullName>
            </value>
            <value>
                <fullName>Closed - Linked to Enterprise Account</fullName>
            </value>
            <value>
                <fullName>Closed - Enterprise Account Updated</fullName>
            </value>
            <value>
                <fullName>Closed - No Action</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>