force-app/main/default/objects/Work_Item__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Displays brief description of work item.</description>
    <inlineHelpText>Displays brief description of work item.</inlineHelpText>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>