force-app/main/default/objects/Work_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary Products</fullName>
            </value>
            <value>
                <fullName>Data Governance</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
                <isActive>false</isActive>
                <label>Change of Ownership</label>
            </value>
            <value>
                <fullName>Credit Request</fullName>
                <isActive>false</isActive>
                <label>Credit Request</label>
            </value>
            <value>
                <fullName>Data_Governance</fullName>
                <isActive>false</isActive>
                <label>Data_Governance</label>
            </value>
            <value>
                <fullName>Implementations Request</fullName>
                <isActive>false</isActive>
                <label>Implementations Request</label>
            </value>
            <value>
                <fullName>Order Return</fullName>
                <isActive>false</isActive>
                <label>Order Return</label>
            </value>
            <value>
                <fullName>PIMS</fullName>
                <isActive>false</isActive>
                <label>PIMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>