force-app/main/default/objects/Work_Item__c/fields/Work_Item_Origin__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Origin__c</fullName>
    <description>Displays the origin of the work item.</description>
    <inlineHelpText>Displays the origin of the work item.</inlineHelpText>
    <label>Work Item Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VFC</fullName>
            </value>
            <value>
                <fullName>HSDS</fullName>
            </value>
            <value>
                <fullName>HSVS</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
                <isActive>false</isActive>
                <label>GPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>