force-app/main/default/objects/Work_Item__c/recordTypes/Data_Governance_Task.recordType-meta.xml
<RecordType>
    <fullName>Data_Governance_Task</fullName>
    <active>true</active>
    <description>Work Item type used by the Data governance team to process Keystore Items</description>
    <label>Data Governance Task</label>
</RecordType>