force-app/main/default/objects/Work_Item__c/recordTypes/Implementations_Task.recordType-meta.xml
<RecordType>
    <fullName>Implementations_Task</fullName>
    <active>true</active>
    <description>Work Item type to manage task for the implementations team</description>
    <label>Implementations Task</label>
</RecordType>