force-app/main/default/objects/Work_Item__c/validationRules/Description_required_for_No_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_required_for_No_Action</fullName>
    <active>true</active>
    <description>Ensures the description field is populated if the No Action reason is chosen.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Closed - No Action&quot;) &amp;&amp;
 ISBLANK(Description__c)</errorConditionFormula>
    <errorMessage>Please fill out the description field in order to close the work item as No Action</errorMessage>
</ValidationRule>