force-app/main/default/objects/Work_Item__c/validationRules/Required_fields_to_Launch_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_to_Launch_Project</fullName>
    <active>true</active>
    <description>To launch a project, first select a template from the Project Template field below.  If your desired project is not on the list, use the &quot;Launch Project&quot; button from the account and choose directly from the correct folder</description>
    <errorConditionFormula>Launch_Project__c = TRUE &amp;&amp;
 ISBLANK( TEXT( Project_Template__c ) )</errorConditionFormula>
    <errorDisplayField>Project_Template__c</errorDisplayField>
    <errorMessage>Please choose a template in order to launch a project from this work item.  If you do not wish to launch a project, uncheck the &quot;Launch Project&quot; checkbox</errorMessage>
</ValidationRule>