force-app/main/default/objects/Work_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity__c</columns>
    <columns>Work_Item_Origin__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Admin</role>
        <role>GSS_NA_Admin</role>
    </sharedTo>
</ListView>