force-app/main/default/objects/Work_Item__c/listViews/Customer_Master_Queue.listView-meta.xml
<ListView>
    <fullName>Customer_Master_Queue</fullName>
    <columns>NAME</columns>
    <columns>Legacy_Account__c</columns>
    <columns>Enterprise_Account__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Item_Origin__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - New Enterprise Account Created,Closed - Linked to Enterprise Account,Closed - Enterprise Account Updated,Closed - No Action,Closed</value>
    </filters>
    <label>Customer Master Queue</label>
    <queue>Data_Governance</queue>
</ListView>