force-app/main/default/objects/Work_Item__c/listViews/Data_Governance_Overflow_Work_Item.listView-meta.xml
<ListView>
    <fullName>Data_Governance_Overflow_Work_Item</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Data Governance Overflow</label>
    <queue>Data_Governance_Overflow</queue>
    <sharedTo>
        <group>Covetrus_Data_Analyst</group>
    </sharedTo>
</ListView>