force-app/main/default/objects/Work_Item__c/listViews/GSS_NA_Training_Work_Item.listView-meta.xml
<ListView>
    <fullName>GSS_NA_Training_Work_Item</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>GSS NA - New PIMS Onboarding</label>
    <queue>GSS_NA_New_PIMS_Onboarding</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>