force-app/main/default/objects/Work_Item__c/listViews/My_Open_Work_Items.listView-meta.xml
<ListView>
    <fullName>My_Open_Work_Items</fullName>
    <columns>NAME</columns>
    <columns>Legacy_Account__c</columns>
    <columns>Enterprise_Account__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Item_Origin__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - New Enterprise Account Created,Closed - Linked to Enterprise Account,Closed - Enterprise Account Updated,Closed - No Action,Closed</value>
    </filters>
    <label>My Open Work Items (Customer Master)</label>
    <sharedTo>
        <group>Covetrus_Data_Analyst</group>
    </sharedTo>
</ListView>