force-app/main/default/objects/Work_Item__c/listViews/My_Open_Work_Items_Implementations.listView-meta.xml
<ListView>
    <fullName>My_Open_Work_Items_Implementations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Reason__c</columns>
    <columns>Account__c</columns>
    <columns>Asset__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Open Work Items (Implementations)</label>
    <sharedTo>
        <roleAndSubordinates>GSS_NA_Implementation_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>